# lupp

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/format/: json.rs  logfmt.rs  mod.rs
src/styling/: mod.rs  style.rs  theme.rs
