[package]
name = "lupp"
version = "0.1.3"
edition = "2021"
authors = ["Fredrik Enestad"]
license-file = "LICENSE"
readme = "README.md"
description = "Commandline tool for colorizing logs"
categories = ["command-line-utilities", "development-tools::debugging"]
repository = "https://github.com/fredr/lupp"

[dependencies]
